# pyspark_local

./: README.md  pyproject.toml
data/: .gitignore
pyspark_local/: main.py
